--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 9s - loss: 0.4363 - mse: 0.4363</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4304 - mse: 0.4304</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4220 - mse: 0.4220</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4156 - mse: 0.4156</span>
-<span class="go">4/4 [==============================] - 5s 757ms/step - loss: 0.4117 - mse: 0.4117 - val_loss: 0.4209 - val_mse: 0.4209</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 12s - loss: 0.4493 - mse: 0.4493</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4276 - mse: 0.4276 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4129 - mse: 0.4129</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4087 - mse: 0.4087</span>
+<span class="go">4/4 [==============================] - 7s 1s/step - loss: 0.4061 - mse: 0.4061 - val_loss: 0.4184 - val_mse: 0.4184</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3717 - mse: 0.3717</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3735 - mse: 0.3735</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3793 - mse: 0.3793</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3824 - mse: 0.3824</span>
-<span class="go">4/4 [==============================] - 2s 559ms/step - loss: 0.3843 - mse: 0.3843 - val_loss: 0.4236 - val_mse: 0.4236</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3411 - mse: 0.3411</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3561 - mse: 0.3561</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3659 - mse: 0.3659</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3723 - mse: 0.3723</span>
+<span class="go">4/4 [==============================] - 3s 779ms/step - loss: 0.3762 - mse: 0.3762 - val_loss: 0.4165 - val_mse: 0.4165</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3845 - mse: 0.3845</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4009 - mse: 0.4009</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3999 - mse: 0.3999</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3983 - mse: 0.3983</span>
-<span class="go">4/4 [==============================] - 2s 550ms/step - loss: 0.3973 - mse: 0.3973 - val_loss: 0.4241 - val_mse: 0.4241</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3878 - mse: 0.3878</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3771 - mse: 0.3771</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3803 - mse: 0.3803</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3835 - mse: 0.3835</span>
+<span class="go">4/4 [==============================] - 3s 762ms/step - loss: 0.3855 - mse: 0.3855 - val_loss: 0.4149 - val_mse: 0.4149</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4274 - mse: 0.4274</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4246 - mse: 0.4246</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4161 - mse: 0.4161</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4101 - mse: 0.4101</span>
-<span class="go">4/4 [==============================] - 2s 554ms/step - loss: 0.4064 - mse: 0.4064 - val_loss: 0.4256 - val_mse: 0.4256</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4353 - mse: 0.4353</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4124 - mse: 0.4124</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4074 - mse: 0.4074</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4041 - mse: 0.4041</span>
+<span class="go">4/4 [==============================] - 3s 767ms/step - loss: 0.4021 - mse: 0.4021 - val_loss: 0.4137 - val_mse: 0.4137</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3654 - mse: 0.3654</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3641 - mse: 0.3641</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3723 - mse: 0.3723</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3772 - mse: 0.3772</span>
-<span class="go">4/4 [==============================] - 2s 573ms/step - loss: 0.3801 - mse: 0.3801 - val_loss: 0.4250 - val_mse: 0.4250</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3718 - mse: 0.3718</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3850 - mse: 0.3850</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3884 - mse: 0.3884</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3895 - mse: 0.3895</span>
+<span class="go">4/4 [==============================] - 3s 755ms/step - loss: 0.3901 - mse: 0.3901 - val_loss: 0.4128 - val_mse: 0.4128</span>
 </pre></div>
 </div>
 </section>
