--- a/user_guides/primitives_pipelines/primitives/VAE.html
+++ b/user_guides/primitives_pipelines/primitives/VAE.html
@@ -312,29 +312,32 @@
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.9481</span>
-<span class="go">1/1 [==============================] - 3s 3s/step - loss: 0.9481</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 1.0650</span>
+<span class="go">1/1 [==============================] - 2s 2s/step - loss: 1.0650</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6949</span>
-<span class="go">1/1 [==============================] - 0s 32ms/step - loss: 0.6949</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.7025</span>
+<span class="go">1/1 [==============================] - 0s 23ms/step - loss: 0.7025</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5304</span>
-<span class="go">1/1 [==============================] - 0s 34ms/step - loss: 0.5304</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5492</span>
+<span class="go">1/1 [==============================] - 0s 25ms/step - loss: 0.5492</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5017</span>
-<span class="go">1/1 [==============================] - 0s 34ms/step - loss: 0.5017</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.2966</span>
+<span class="go">1/1 [==============================] - 0s 27ms/step - loss: 0.2966</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5815</span>
-<span class="go">1/1 [==============================] - 0s 32ms/step - loss: 0.5815</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.4398</span>
+<span class="go">1/1 [==============================] - 0s 22ms/step - loss: 0.4398</span>
 
 <span class="gp">In [6]: </span><span class="n">pred</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
+<span class="go">1/1 [==============================] - ETA: 0s</span>
+<span class="go">1/1 [==============================] - 1s 528ms/step</span>
+
 <span class="gp">In [7]: </span><span class="n">pred</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span>
-<span class="gh">Out[7]: </span><span class="go">0.5112075471088615</span>
+<span class="gh">Out[7]: </span><span class="go">0.472129261517142</span>
 </pre></div>
 </div>
 </section>
