--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 8s - loss: 0.4055 - mse: 0.4055</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.4102 - mse: 0.4102</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3978 - mse: 0.3978</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3928 - mse: 0.3928</span>
-<span class="go">4/4 [==============================] - 4s 528ms/step - loss: 0.3928 - mse: 0.3928 - val_loss: 0.4192 - val_mse: 0.4192</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 10s - loss: 0.3537 - mse: 0.3537</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3963 - mse: 0.3963 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3938 - mse: 0.3938</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3963 - mse: 0.3963</span>
+<span class="go">4/4 [==============================] - 6s 720ms/step - loss: 0.3963 - mse: 0.3963 - val_loss: 0.4227 - val_mse: 0.4227</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4144 - mse: 0.4144</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.4005 - mse: 0.4005</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3957 - mse: 0.3957</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3940 - mse: 0.3940</span>
-<span class="go">4/4 [==============================] - 1s 350ms/step - loss: 0.3940 - mse: 0.3940 - val_loss: 0.4187 - val_mse: 0.4187</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3588 - mse: 0.3588</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3451 - mse: 0.3451</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3971 - mse: 0.3971</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3905 - mse: 0.3905</span>
+<span class="go">4/4 [==============================] - 2s 489ms/step - loss: 0.3905 - mse: 0.3905 - val_loss: 0.4224 - val_mse: 0.4224</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3933 - mse: 0.3933</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3957 - mse: 0.3957</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3935 - mse: 0.3935</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3920 - mse: 0.3920</span>
-<span class="go">4/4 [==============================] - 1s 352ms/step - loss: 0.3920 - mse: 0.3920 - val_loss: 0.4195 - val_mse: 0.4195</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3948 - mse: 0.3948</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3667 - mse: 0.3667</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3940 - mse: 0.3940</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3897 - mse: 0.3897</span>
+<span class="go">4/4 [==============================] - 2s 489ms/step - loss: 0.3897 - mse: 0.3897 - val_loss: 0.4236 - val_mse: 0.4236</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3821 - mse: 0.3821</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.4297 - mse: 0.4297</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3917 - mse: 0.3917</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3918 - mse: 0.3918</span>
-<span class="go">4/4 [==============================] - 1s 357ms/step - loss: 0.3918 - mse: 0.3918 - val_loss: 0.4194 - val_mse: 0.4194</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3847 - mse: 0.3847</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3892 - mse: 0.3892</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3879 - mse: 0.3879</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3927 - mse: 0.3927</span>
+<span class="go">4/4 [==============================] - 2s 494ms/step - loss: 0.3927 - mse: 0.3927 - val_loss: 0.4256 - val_mse: 0.4256</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3615 - mse: 0.3615</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3594 - mse: 0.3594</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3956 - mse: 0.3956</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3901 - mse: 0.3901</span>
-<span class="go">4/4 [==============================] - 1s 350ms/step - loss: 0.3901 - mse: 0.3901 - val_loss: 0.4196 - val_mse: 0.4196</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4126 - mse: 0.4126</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3838 - mse: 0.3838</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3948 - mse: 0.3948</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3913 - mse: 0.3913</span>
+<span class="go">4/4 [==============================] - 2s 490ms/step - loss: 0.3913 - mse: 0.3913 - val_loss: 0.4272 - val_mse: 0.4272</span>
 </pre></div>
 </div>
 </section>
