--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 8s - loss: 0.4411 - mse: 0.4411</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3962 - mse: 0.3962</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4050 - mse: 0.4050</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3935 - mse: 0.3935</span>
-<span class="go">4/4 [==============================] - 5s 632ms/step - loss: 0.3935 - mse: 0.3935 - val_loss: 0.4192 - val_mse: 0.4192</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 10s - loss: 0.3762 - mse: 0.3762</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3917 - mse: 0.3917 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3941 - mse: 0.3941</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3960 - mse: 0.3960</span>
+<span class="go">4/4 [==============================] - 5s 531ms/step - loss: 0.3960 - mse: 0.3960 - val_loss: 0.4196 - val_mse: 0.4196</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3238 - mse: 0.3238</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3736 - mse: 0.3736</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3863 - mse: 0.3863</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3916 - mse: 0.3916</span>
-<span class="go">4/4 [==============================] - 1s 346ms/step - loss: 0.3916 - mse: 0.3916 - val_loss: 0.4217 - val_mse: 0.4217</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3655 - mse: 0.3655</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3777 - mse: 0.3777</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3958 - mse: 0.3958</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3907 - mse: 0.3907</span>
+<span class="go">4/4 [==============================] - 1s 353ms/step - loss: 0.3907 - mse: 0.3907 - val_loss: 0.4187 - val_mse: 0.4187</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4088 - mse: 0.4088</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3940 - mse: 0.3940</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3933 - mse: 0.3933</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3911 - mse: 0.3911</span>
-<span class="go">4/4 [==============================] - 1s 345ms/step - loss: 0.3911 - mse: 0.3911 - val_loss: 0.4217 - val_mse: 0.4217</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3913 - mse: 0.3913</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3978 - mse: 0.3978</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3922 - mse: 0.3922</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3925 - mse: 0.3925</span>
+<span class="go">4/4 [==============================] - 1s 350ms/step - loss: 0.3925 - mse: 0.3925 - val_loss: 0.4197 - val_mse: 0.4197</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4081 - mse: 0.4081</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.4090 - mse: 0.4090</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3934 - mse: 0.3934</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3920 - mse: 0.3920</span>
-<span class="go">4/4 [==============================] - 1s 347ms/step - loss: 0.3920 - mse: 0.3920 - val_loss: 0.4247 - val_mse: 0.4247</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3188 - mse: 0.3188</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3955 - mse: 0.3955</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3890 - mse: 0.3890</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3961 - mse: 0.3961</span>
+<span class="go">4/4 [==============================] - 1s 353ms/step - loss: 0.3961 - mse: 0.3961 - val_loss: 0.4210 - val_mse: 0.4210</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4594 - mse: 0.4594</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.3657 - mse: 0.3657</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3882 - mse: 0.3882</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3952 - mse: 0.3952</span>
-<span class="go">4/4 [==============================] - 1s 345ms/step - loss: 0.3952 - mse: 0.3952 - val_loss: 0.4248 - val_mse: 0.4248</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4042 - mse: 0.4042</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 0s - loss: 0.4045 - mse: 0.4045</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3912 - mse: 0.3912</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3931 - mse: 0.3931</span>
+<span class="go">4/4 [==============================] - 1s 350ms/step - loss: 0.3931 - mse: 0.3931 - val_loss: 0.4204 - val_mse: 0.4204</span>
 </pre></div>
 </div>
 </section>
